# decentralized_inference_benchmark_utils

./: .gitignore  README.md  delay.sh  pyproject.toml
activation_visualizer/: README.md  main.py
delay_rtt_rate/: README.md  delay.sh
gantt_log_visualizer/: README.md  four_rank_parser.py  log_visualizer.py  single_rank_parser.py  template.py  two_rank_parser.py
gantt_log_visualizer/RTT40ms_BW250M_GPU4_logs/: long_bf16.py  long_f32.py  long_fp16.py  long_fp4.py  long_fp8.py  long_iq2_s.py  long_iq2_xs.py  long_iq2_xxs.py  long_mxfp4.py  long_mxfp8.py  long_nf4.py  long_nf4_dq.py  long_nvfp4.py  long_q2_k.py  long_q4_0.py  long_q8_0.py  long_sp0.1.py  long_sp0.2.py  long_sp0.3.py  long_sp0.4.py  long_sp0.5.py  long_sp0.6.py  short_f32.py  single_f32.py
gguf-split-b5734/: README.md  llama-gguf-split
gguf_metadata_converter/: README.md  converter.py
gguf_metadata_extractor/: extractor.py
llm_evaluation/: README.md  aime_2025.py  global_mmlu_lite_en.py  gpqa_diamond.py  mmlu_pro.py  mmlu_pro_mine.py
manual_rtt_delay/: README.md
p2p_zmq_benchmark/: README.md  zmq_benchmark.cpp
petals_client_for_benchmark/: README.md  main.py
petals_client_for_benchmark/prompts/: llama8B_long.txt  llama8B_short.txt
primacpp_cmds_generator/: .gitignore  README.md  cli_example.json  example_config.json  generate_commands.py  long_prompt.txt  multiline_prompt.txt  perplexity_example.json  server_example.json  short_prompt.txt  test_prompt.txt  utils.py
primacpp_server_benchmark/: README.md  benchmark.py  benchmark_prima.py  example.sh  long_prompt.txt  short_prompt.txt
