[project]
name = "decentralized-inference-benchmark-utils"
version = "0.1.0"
description = "A collection of tools for benchmarking decentralized inference system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "httpx[http2]>=0.28.1",
    "openai>=1.98.0",
    "tiktoken>=0.9.0",
]
